--- a/forms/location.css
+++ b/forms/location.css
@@ -41,3 +41,9 @@ main {
 form div {
     margin: 15px 0px;
 }
+
+@media only screen and (min-width: 600px) {
+    .map {
+        width: 400px;
+    }
+}
